Added attachments functionality (#4)
* schema

* get_attachments endpoint

* delete_attachment

* create_attachment endpoint

* get_attachment

* docs

* add tests to sanitize filename
